syntax = "proto3";

package silenteight.agent.historicaldecisions.v1.api;

import "google/api/field_behavior.proto";

option java_package = "com.silenteight.proto.agent.histdecisions.v1.api";
option java_outer_classname = "HistoricalDecisionsCommonProto";
option java_multiple_files = true;

message Discriminator {
  // Customer identification, e.g. siempre_ts_historical_learning
  //  Should be the same as in the Learning Engine request
  string value = 1 [(google.api.field_behavior) = REQUIRED];
}

message WatchlistParty {
  string id = 1 [(google.api.field_behavior) = REQUIRED]; // e.g. WL_ID_123
  // e.g. WorldCheckIndividuals | WorldCheckEntities | PrivateListIndividuals | PrivateListEntities
  string type = 2 [(google.api.field_behavior) = REQUIRED];
}

message HistoricalDecisionsReason {
  repeated DecisionCount decision_counts = 1 [(google.api.field_behavior) = REQUIRED];
  Discriminator discriminator = 2 [(google.api.field_behavior) = REQUIRED];
  //In case when alerted party ID was given in the request, it's just copied here (e.g. Historical Decisions Agent)
  //Otherwise, it's generated from various request values - e.g. in Contextual Learning Agent
  //match_text, matching_field and discriminator from VerifyRequest are used.
  //Those fields are optional, as not always all of them are set in the request
  string alerted_party_id = 3 [(google.api.field_behavior) = OPTIONAL];
  string watchlist_party_id = 4 [(google.api.field_behavior) = OPTIONAL];
  string watchlist_party_type = 5 [(google.api.field_behavior) = OPTIONAL];
}

message DecisionCount {
  // Decision name, e.g. TRUE_POSITIVE
  string name = 1 [(google.api.field_behavior) = REQUIRED];
  // The number of decisions of the given name, e.g. 5
  int32 count = 2 [(google.api.field_behavior) = REQUIRED];
}



